# anon

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  dockerfile  rust-toolchain  rustfmt.toml
.circleci/: config.yml
.github/workflows/: audit.yml  build.yml  ci.yml  dockerise.yml  image-publish.yml  lints.yml
client/: Cargo.toml
client/src/: main.rs  merkle.rs
contracts/evm/webb-anchor/: hardhat.config.js  package.json  truffle-config.js
contracts/evm/webb-anchor/contracts/: Anchor.sol  ERC20Anchor.sol  MerkleTreeWithHistory.sol  NativeAnchor.sol
contracts/evm/webb-anchor/contracts/mocks/: BadRecipient.sol  ERC20Mock.sol  IUSDT.sol  MerkleTreeWithHistoryMock.sol
contracts/evm/webb-anchor/scripts/: mpc_emulation.sh
contracts/evm/webb-anchor/test/: ERC20Tornado.test.js  ETHTornado.test.js
contracts/wasm/merkle_extension/: Cargo.toml  lib.rs
contracts/wasm/merkle_extension/runtime/: extension.rs
crypto-constants/: Cargo.toml
crypto-constants/data/poseidon/: mds_2.txt  round_constants_2.txt  round_constants_3.txt  round_constants_4.txt  round_constants_5.txt  round_constants_6.txt  round_constants_7.txt  round_constants_8.txt  round_constants_9.txt
crypto-constants/src/: lib.rs  main.rs  utils.rs
crypto-constants/src/poseidon/: constants_2.rs  constants_3.rs  constants_4.rs  constants_5.rs  constants_6.rs  constants_7.rs  constants_8.rs  constants_9.rs  mod.rs
crypto-constants/src/smt/: mod.rs
docker/: Dockerfile
gadgets/: Cargo.toml
gadgets/src/: lib.rs  utils.rs
gadgets/src/fixed_deposit_tree/: builder.rs  mod.rs  tests.rs
gadgets/src/poseidon/: builder.rs  mod.rs  sbox.rs  tests.rs
gadgets/src/smt/: binary_smt.rs  builder.rs  mod.rs  smt.rs  tests.rs
gadgets/src/time_based_rewarding/: builder.rs  mod.rs  tests.rs
gadgets/src/transaction/: builder.rs  mod.rs  tests.rs  transaction.rs
gadgets/src/variable_deposit_tree/: builder.rs  mod.rs  tests.rs
gadgets/src/zero_nonzero/: mod.rs  tests.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  rpc.rs  service.rs
pallets/: README.md
pallets/assets-mixer/: Cargo.toml
pallets/assets-mixer/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/bridge/: Cargo.toml
pallets/bridge/src/: lib.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/clsag/: Cargo.toml  README.md
pallets/clsag/benches/: bench.rs
pallets/clsag/src/: lib.rs  mock.rs  tests.rs
pallets/clsag/src/clsag/: clsag.rs  constants.rs  keys.rs  member.rs  mod.rs  signature.rs  tests_helper.rs  transcript.rs
pallets/currencies/: Cargo.toml
pallets/currencies/src/: default_weight.rs  lib.rs  mock.rs  tests.rs
pallets/groups/: Cargo.toml
pallets/groups/benches/: bench.rs
pallets/groups/src/: clsag.rs  constants.rs  keys.rs  lib.rs  member.rs  mock.rs  signature.rs  tests.rs  tests_helper.rs
pallets/merkle/: Cargo.toml
pallets/merkle-reward/: Cargo.toml
pallets/merkle-reward/src/: group_trait.rs  lib.rs  mock.rs  tests.rs
pallets/merkle-reward/src/merkle/: keys.rs
pallets/merkle/benches/: bench.rs
pallets/merkle/rpc/: Cargo.toml
pallets/merkle/rpc/src/: lib.rs
pallets/merkle/src/: benchmarking.rs  group_trait.rs  keys.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
pallets/merkle/src/merkle/: constants.rs  hasher.rs  helper.rs  keys.rs  mimc.rs  mod.rs  permissions.rs  poseidon.rs
pallets/merkle/src/utils/: hasher.rs  keys.rs  mod.rs  permissions.rs  setup.rs
pallets/mixer/: Cargo.toml
pallets/mixer/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
pallets/mixer/src/mixer/: authentication.rs
pallets/recursion/: Cargo.toml
pallets/recursion/src/: lib.rs  types.rs
pallets/tokens/: Cargo.toml
pallets/tokens/src/: basic_currency.rs  imbalance.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/traits/: Cargo.toml
pallets/traits/src/: account.rs  auction.rs  data_provider.rs
pallets/utilities/: Cargo.toml
pallets/utilities/src/: iterator.rs
pallets/webb-tokens/: Cargo.toml
pallets/webb-tokens/src/: lib.rs  mock.rs  traits.rs  types.rs
precompiles/: Cargo.toml
precompiles/src/: encoding.rs  lib.rs  types.rs  withdraw_proof.rs
primitives/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs  merkle_tree.rs
scripts/: bench.sh  build.sh  build_benchmarks.sh  client.sh  docs.sh  init.sh  list_benchmarks.sh  merkle-leaves.sh  start.sh  start_benchmarks.sh  test.sh
src/: lib.rs  test.rs
ts-tests/frontier-tester/: package.json  tsconfig.json
ts-tests/frontier-tester/helpers/: initDefaultAccountBalance.ts  utils.js
ts-tests/frontier-tester/tests/: addLiquidity.js  testAllowance.js  testCreate.js  testCreate2.js  testECRecovery.js  testEvent.js  testFallback.js  testGasWeighting.ts  testHashing.js  testInterfaces.js  testLockdrop.js  testOwner.js  testPrecompiles.js  testSubstrateBalances.ts  testSubstrateFeatures.ts  testTime.js  testValue.js
wasm-utils/: Cargo.toml  build.sh  init.sh  publish.sh  test.sh
wasm-utils/src/: lib.rs
web/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
web/pages/: index.tsx
web/wasm-utils/: Cargo.toml
web/wasm-utils/src/: lib.rs
