[workspace]
members = [
	"node",
	"pallets/bridge",
	"pallets/currencies",
	"pallets/merkle",
	"pallets/merkle/rpc",
	"pallets/mixer",
	"pallets/tokens",
	"pallets/traits",
	"pallets/utilities",
	"runtime",
]

[profile.dev.package]
aes-soft = { opt-level = 3 }
aesni = { opt-level = 3 }
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crossbeam-queue = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
h2 = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

# [patch.crates-io]
# fork-tree = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# frame-executive = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# frame-metadata = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# frame-support = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# frame-support-procedural = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# frame-support-procedural-tools = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# frame-support-procedural-tools-derive = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# frame-system = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-assets = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-aura = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-authority-discovery = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-authorship = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-balances = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-collective = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-contracts = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-contracts-proc-macro = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-democracy = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-grandpa = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-identity = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-im-online = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-indices = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-multisig = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-offences = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-proxy = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-recovery = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-scheduler = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-session = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-staking = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-sudo = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-treasury = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-utility = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# pallet-vesting = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-authority-discovery = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-block-builder = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-chain-spec-derive = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-cli = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-client-api = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-client-db = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-consensus = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-consensus-uncles = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-executor = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-executor-common = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-executor-wasmi = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-executor-wasmtime = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-informant = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-keystore = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-light = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-network = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-network-gossip = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-offchain = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-peerset = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-proposer-metrics = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-rpc-server = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-service = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-state-db = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-telemetry = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-tracing = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-transaction-graph = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-allocator = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-api = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-api-proc-macro = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-authority-discovery = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-authorship = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-block-builder = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-blockchain = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-chain-spec = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-consensus = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-consensus-slots = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-consensus-vrf = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-database = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-debug-derive = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-externalities = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-inherents = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-io = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-keyring = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-keystore = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-npos-elections = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-npos-elections-compact = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-offchain = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-panic-handler = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-sandbox = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-serializer = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-session = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-staking = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-state-machine = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-std = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-storage = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-tasks = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-timestamp = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-tracing = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-trie = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-utils = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-version = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# sp-wasm-interface = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# substrate-browser-utils = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# substrate-frame-cli = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }
# substrate-test-client = { git = "https://github.com/paritytech/substrate.git", rev = "22f09c602704aeee2b59b14f427f73f6cb8b5e2f", rev = "982df173190685bb18b7ed46b860e36387b9a7a9" }