[package]
name = "client"
version = "0.1.0"
authors = ["Commonwealth <https://github.com/hicommonwealth>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-subxt = "0.13.0"
async-std = { version = "1.6.4", features = ["attributes"] }
sp-keyring = "2.0.0"

[workspace]