[package]
name = "client"
version = "0.1.0"
authors = ["Commonwealth <https://github.com/hicommonwealth>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-subxt = { version = "0.13.0", git = "https://github.com/paritytech/substrate-subxt.git", rev = "0a926ef4c45eb86e39c036480180577d609fd776" }
async-std = { version = "1.6.4", features = ["attributes"] }
sp-keyring = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git" }
pallet-merkle = { path = "../pallets/merkle" }
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive", "full"] }
frame-support = { default-features = false, version = "2.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { default-features = false, version = "2.0.0", git = "https://github.com/paritytech/substrate.git" }